fix main container alignment

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ img {
 .main-container {
   position: absolute;
   left: 33%;
-  top: 20%;
+  top: 24%;
   width: 45%;
   /* height: 100vh; */
   transform: translate(-50%, -20%);
@@ -264,14 +264,14 @@ img {
 @media only screen and (max-width: 75em) {
   .main-container {
     left: 31%;
-    top: 11%;
+    top: 20%;
     width: 50%;
   }
 }
 @media only screen and (max-width: 37.5em) {
   .main-container {
     left: 35%;
-    top: 14%;
+    top: 19%;
     width: 60%;
   } 
 }
